[package]
name = "vault"
version = "0.1.0"
edition = "2021"
authors = ["ryantaylor <2320507+ryantaylor@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5" }
byteorder = "1"
nom = "7"
nom-tracable = "0.8"
nom_locate = "4"
serde = { version = "1.0", features = ["derive"] }
serde_magnus = "0.2"

[features]
trace = ["nom-tracable/trace"]
