[package]
name = "vault"
version = "0.1.0"
edition = "2021"
authors = ["ryantaylor <2320507+ryantaylor@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5" }
vault = { git = "https://github.com/ryantaylor/vault.git", branch = "coh3", features = ["magnus"] }
