[package]
name = "vault_coh"
version = "1.0.0"
edition = "2021"
authors = ["ryantaylor <2320507+ryantaylor@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6" }
serde_magnus = { version = "0.8" }
vault = { version = "6", features = ["magnus", "serde"] }
